; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_vp9dsp_template.c_tm_32x32_c.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_vp9dsp_template.c_tm_32x32_c.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i32*)* @tm_32x32_c to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tm_32x32_c(i32* %0, i32 %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %15 = load i32*, i32** %5, align 8
  store i32* %15, i32** %9, align 8
  %16 = load i32*, i32** %7, align 8
  store i32* %16, i32** %10, align 8
  %17 = load i32*, i32** %8, align 8
  store i32* %17, i32** %11, align 8
  %18 = load i32*, i32** %11, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 -1
  %20 = load i32, i32* %19, align 4
  store i32 %20, i32* %13, align 4
  %21 = load i32, i32* %6, align 4
  %22 = sext i32 %21 to i64
  %23 = udiv i64 %22, 4
  %24 = trunc i64 %23 to i32
  store i32 %24, i32* %6, align 4
  store i32 0, i32* %12, align 4
  br label %25

25:                                               ; preds = %297, %4
  %26 = load i32, i32* %12, align 4
  %27 = icmp slt i32 %26, 32
  br i1 %27, label %28, label %300

28:                                               ; preds = %25
  %29 = load i32*, i32** %10, align 8
  %30 = load i32, i32* %12, align 4
  %31 = sub nsw i32 31, %30
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds i32, i32* %29, i64 %32
  %34 = load i32, i32* %33, align 4
  %35 = load i32, i32* %13, align 4
  %36 = sub nsw i32 %34, %35
  store i32 %36, i32* %14, align 4
  %37 = load i32*, i32** %11, align 8
  %38 = getelementptr inbounds i32, i32* %37, i64 0
  %39 = load i32, i32* %38, align 4
  %40 = load i32, i32* %14, align 4
  %41 = add nsw i32 %39, %40
  %42 = call i32 @av_clip_pixel(i32 %41)
  %43 = load i32*, i32** %9, align 8
  %44 = getelementptr inbounds i32, i32* %43, i64 0
  store i32 %42, i32* %44, align 4
  %45 = load i32*, i32** %11, align 8
  %46 = getelementptr inbounds i32, i32* %45, i64 1
  %47 = load i32, i32* %46, align 4
  %48 = load i32, i32* %14, align 4
  %49 = add nsw i32 %47, %48
  %50 = call i32 @av_clip_pixel(i32 %49)
  %51 = load i32*, i32** %9, align 8
  %52 = getelementptr inbounds i32, i32* %51, i64 1
  store i32 %50, i32* %52, align 4
  %53 = load i32*, i32** %11, align 8
  %54 = getelementptr inbounds i32, i32* %53, i64 2
  %55 = load i32, i32* %54, align 4
  %56 = load i32, i32* %14, align 4
  %57 = add nsw i32 %55, %56
  %58 = call i32 @av_clip_pixel(i32 %57)
  %59 = load i32*, i32** %9, align 8
  %60 = getelementptr inbounds i32, i32* %59, i64 2
  store i32 %58, i32* %60, align 4
  %61 = load i32*, i32** %11, align 8
  %62 = getelementptr inbounds i32, i32* %61, i64 3
  %63 = load i32, i32* %62, align 4
  %64 = load i32, i32* %14, align 4
  %65 = add nsw i32 %63, %64
  %66 = call i32 @av_clip_pixel(i32 %65)
  %67 = load i32*, i32** %9, align 8
  %68 = getelementptr inbounds i32, i32* %67, i64 3
  store i32 %66, i32* %68, align 4
  %69 = load i32*, i32** %11, align 8
  %70 = getelementptr inbounds i32, i32* %69, i64 4
  %71 = load i32, i32* %70, align 4
  %72 = load i32, i32* %14, align 4
  %73 = add nsw i32 %71, %72
  %74 = call i32 @av_clip_pixel(i32 %73)
  %75 = load i32*, i32** %9, align 8
  %76 = getelementptr inbounds i32, i32* %75, i64 4
  store i32 %74, i32* %76, align 4
  %77 = load i32*, i32** %11, align 8
  %78 = getelementptr inbounds i32, i32* %77, i64 5
  %79 = load i32, i32* %78, align 4
  %80 = load i32, i32* %14, align 4
  %81 = add nsw i32 %79, %80
  %82 = call i32 @av_clip_pixel(i32 %81)
  %83 = load i32*, i32** %9, align 8
  %84 = getelementptr inbounds i32, i32* %83, i64 5
  store i32 %82, i32* %84, align 4
  %85 = load i32*, i32** %11, align 8
  %86 = getelementptr inbounds i32, i32* %85, i64 6
  %87 = load i32, i32* %86, align 4
  %88 = load i32, i32* %14, align 4
  %89 = add nsw i32 %87, %88
  %90 = call i32 @av_clip_pixel(i32 %89)
  %91 = load i32*, i32** %9, align 8
  %92 = getelementptr inbounds i32, i32* %91, i64 6
  store i32 %90, i32* %92, align 4
  %93 = load i32*, i32** %11, align 8
  %94 = getelementptr inbounds i32, i32* %93, i64 7
  %95 = load i32, i32* %94, align 4
  %96 = load i32, i32* %14, align 4
  %97 = add nsw i32 %95, %96
  %98 = call i32 @av_clip_pixel(i32 %97)
  %99 = load i32*, i32** %9, align 8
  %100 = getelementptr inbounds i32, i32* %99, i64 7
  store i32 %98, i32* %100, align 4
  %101 = load i32*, i32** %11, align 8
  %102 = getelementptr inbounds i32, i32* %101, i64 8
  %103 = load i32, i32* %102, align 4
  %104 = load i32, i32* %14, align 4
  %105 = add nsw i32 %103, %104
  %106 = call i32 @av_clip_pixel(i32 %105)
  %107 = load i32*, i32** %9, align 8
  %108 = getelementptr inbounds i32, i32* %107, i64 8
  store i32 %106, i32* %108, align 4
  %109 = load i32*, i32** %11, align 8
  %110 = getelementptr inbounds i32, i32* %109, i64 9
  %111 = load i32, i32* %110, align 4
  %112 = load i32, i32* %14, align 4
  %113 = add nsw i32 %111, %112
  %114 = call i32 @av_clip_pixel(i32 %113)
  %115 = load i32*, i32** %9, align 8
  %116 = getelementptr inbounds i32, i32* %115, i64 9
  store i32 %114, i32* %116, align 4
  %117 = load i32*, i32** %11, align 8
  %118 = getelementptr inbounds i32, i32* %117, i64 10
  %119 = load i32, i32* %118, align 4
  %120 = load i32, i32* %14, align 4
  %121 = add nsw i32 %119, %120
  %122 = call i32 @av_clip_pixel(i32 %121)
  %123 = load i32*, i32** %9, align 8
  %124 = getelementptr inbounds i32, i32* %123, i64 10
  store i32 %122, i32* %124, align 4
  %125 = load i32*, i32** %11, align 8
  %126 = getelementptr inbounds i32, i32* %125, i64 11
  %127 = load i32, i32* %126, align 4
  %128 = load i32, i32* %14, align 4
  %129 = add nsw i32 %127, %128
  %130 = call i32 @av_clip_pixel(i32 %129)
  %131 = load i32*, i32** %9, align 8
  %132 = getelementptr inbounds i32, i32* %131, i64 11
  store i32 %130, i32* %132, align 4
  %133 = load i32*, i32** %11, align 8
  %134 = getelementptr inbounds i32, i32* %133, i64 12
  %135 = load i32, i32* %134, align 4
  %136 = load i32, i32* %14, align 4
  %137 = add nsw i32 %135, %136
  %138 = call i32 @av_clip_pixel(i32 %137)
  %139 = load i32*, i32** %9, align 8
  %140 = getelementptr inbounds i32, i32* %139, i64 12
  store i32 %138, i32* %140, align 4
  %141 = load i32*, i32** %11, align 8
  %142 = getelementptr inbounds i32, i32* %141, i64 13
  %143 = load i32, i32* %142, align 4
  %144 = load i32, i32* %14, align 4
  %145 = add nsw i32 %143, %144
  %146 = call i32 @av_clip_pixel(i32 %145)
  %147 = load i32*, i32** %9, align 8
  %148 = getelementptr inbounds i32, i32* %147, i64 13
  store i32 %146, i32* %148, align 4
  %149 = load i32*, i32** %11, align 8
  %150 = getelementptr inbounds i32, i32* %149, i64 14
  %151 = load i32, i32* %150, align 4
  %152 = load i32, i32* %14, align 4
  %153 = add nsw i32 %151, %152
  %154 = call i32 @av_clip_pixel(i32 %153)
  %155 = load i32*, i32** %9, align 8
  %156 = getelementptr inbounds i32, i32* %155, i64 14
  store i32 %154, i32* %156, align 4
  %157 = load i32*, i32** %11, align 8
  %158 = getelementptr inbounds i32, i32* %157, i64 15
  %159 = load i32, i32* %158, align 4
  %160 = load i32, i32* %14, align 4
  %161 = add nsw i32 %159, %160
  %162 = call i32 @av_clip_pixel(i32 %161)
  %163 = load i32*, i32** %9, align 8
  %164 = getelementptr inbounds i32, i32* %163, i64 15
  store i32 %162, i32* %164, align 4
  %165 = load i32*, i32** %11, align 8
  %166 = getelementptr inbounds i32, i32* %165, i64 16
  %167 = load i32, i32* %166, align 4
  %168 = load i32, i32* %14, align 4
  %169 = add nsw i32 %167, %168
  %170 = call i32 @av_clip_pixel(i32 %169)
  %171 = load i32*, i32** %9, align 8
  %172 = getelementptr inbounds i32, i32* %171, i64 16
  store i32 %170, i32* %172, align 4
  %173 = load i32*, i32** %11, align 8
  %174 = getelementptr inbounds i32, i32* %173, i64 17
  %175 = load i32, i32* %174, align 4
  %176 = load i32, i32* %14, align 4
  %177 = add nsw i32 %175, %176
  %178 = call i32 @av_clip_pixel(i32 %177)
  %179 = load i32*, i32** %9, align 8
  %180 = getelementptr inbounds i32, i32* %179, i64 17
  store i32 %178, i32* %180, align 4
  %181 = load i32*, i32** %11, align 8
  %182 = getelementptr inbounds i32, i32* %181, i64 18
  %183 = load i32, i32* %182, align 4
  %184 = load i32, i32* %14, align 4
  %185 = add nsw i32 %183, %184
  %186 = call i32 @av_clip_pixel(i32 %185)
  %187 = load i32*, i32** %9, align 8
  %188 = getelementptr inbounds i32, i32* %187, i64 18
  store i32 %186, i32* %188, align 4
  %189 = load i32*, i32** %11, align 8
  %190 = getelementptr inbounds i32, i32* %189, i64 19
  %191 = load i32, i32* %190, align 4
  %192 = load i32, i32* %14, align 4
  %193 = add nsw i32 %191, %192
  %194 = call i32 @av_clip_pixel(i32 %193)
  %195 = load i32*, i32** %9, align 8
  %196 = getelementptr inbounds i32, i32* %195, i64 19
  store i32 %194, i32* %196, align 4
  %197 = load i32*, i32** %11, align 8
  %198 = getelementptr inbounds i32, i32* %197, i64 20
  %199 = load i32, i32* %198, align 4
  %200 = load i32, i32* %14, align 4
  %201 = add nsw i32 %199, %200
  %202 = call i32 @av_clip_pixel(i32 %201)
  %203 = load i32*, i32** %9, align 8
  %204 = getelementptr inbounds i32, i32* %203, i64 20
  store i32 %202, i32* %204, align 4
  %205 = load i32*, i32** %11, align 8
  %206 = getelementptr inbounds i32, i32* %205, i64 21
  %207 = load i32, i32* %206, align 4
  %208 = load i32, i32* %14, align 4
  %209 = add nsw i32 %207, %208
  %210 = call i32 @av_clip_pixel(i32 %209)
  %211 = load i32*, i32** %9, align 8
  %212 = getelementptr inbounds i32, i32* %211, i64 21
  store i32 %210, i32* %212, align 4
  %213 = load i32*, i32** %11, align 8
  %214 = getelementptr inbounds i32, i32* %213, i64 22
  %215 = load i32, i32* %214, align 4
  %216 = load i32, i32* %14, align 4
  %217 = add nsw i32 %215, %216
  %218 = call i32 @av_clip_pixel(i32 %217)
  %219 = load i32*, i32** %9, align 8
  %220 = getelementptr inbounds i32, i32* %219, i64 22
  store i32 %218, i32* %220, align 4
  %221 = load i32*, i32** %11, align 8
  %222 = getelementptr inbounds i32, i32* %221, i64 23
  %223 = load i32, i32* %222, align 4
  %224 = load i32, i32* %14, align 4
  %225 = add nsw i32 %223, %224
  %226 = call i32 @av_clip_pixel(i32 %225)
  %227 = load i32*, i32** %9, align 8
  %228 = getelementptr inbounds i32, i32* %227, i64 23
  store i32 %226, i32* %228, align 4
  %229 = load i32*, i32** %11, align 8
  %230 = getelementptr inbounds i32, i32* %229, i64 24
  %231 = load i32, i32* %230, align 4
  %232 = load i32, i32* %14, align 4
  %233 = add nsw i32 %231, %232
  %234 = call i32 @av_clip_pixel(i32 %233)
  %235 = load i32*, i32** %9, align 8
  %236 = getelementptr inbounds i32, i32* %235, i64 24
  store i32 %234, i32* %236, align 4
  %237 = load i32*, i32** %11, align 8
  %238 = getelementptr inbounds i32, i32* %237, i64 25
  %239 = load i32, i32* %238, align 4
  %240 = load i32, i32* %14, align 4
  %241 = add nsw i32 %239, %240
  %242 = call i32 @av_clip_pixel(i32 %241)
  %243 = load i32*, i32** %9, align 8
  %244 = getelementptr inbounds i32, i32* %243, i64 25
  store i32 %242, i32* %244, align 4
  %245 = load i32*, i32** %11, align 8
  %246 = getelementptr inbounds i32, i32* %245, i64 26
  %247 = load i32, i32* %246, align 4
  %248 = load i32, i32* %14, align 4
  %249 = add nsw i32 %247, %248
  %250 = call i32 @av_clip_pixel(i32 %249)
  %251 = load i32*, i32** %9, align 8
  %252 = getelementptr inbounds i32, i32* %251, i64 26
  store i32 %250, i32* %252, align 4
  %253 = load i32*, i32** %11, align 8
  %254 = getelementptr inbounds i32, i32* %253, i64 27
  %255 = load i32, i32* %254, align 4
  %256 = load i32, i32* %14, align 4
  %257 = add nsw i32 %255, %256
  %258 = call i32 @av_clip_pixel(i32 %257)
  %259 = load i32*, i32** %9, align 8
  %260 = getelementptr inbounds i32, i32* %259, i64 27
  store i32 %258, i32* %260, align 4
  %261 = load i32*, i32** %11, align 8
  %262 = getelementptr inbounds i32, i32* %261, i64 28
  %263 = load i32, i32* %262, align 4
  %264 = load i32, i32* %14, align 4
  %265 = add nsw i32 %263, %264
  %266 = call i32 @av_clip_pixel(i32 %265)
  %267 = load i32*, i32** %9, align 8
  %268 = getelementptr inbounds i32, i32* %267, i64 28
  store i32 %266, i32* %268, align 4
  %269 = load i32*, i32** %11, align 8
  %270 = getelementptr inbounds i32, i32* %269, i64 29
  %271 = load i32, i32* %270, align 4
  %272 = load i32, i32* %14, align 4
  %273 = add nsw i32 %271, %272
  %274 = call i32 @av_clip_pixel(i32 %273)
  %275 = load i32*, i32** %9, align 8
  %276 = getelementptr inbounds i32, i32* %275, i64 29
  store i32 %274, i32* %276, align 4
  %277 = load i32*, i32** %11, align 8
  %278 = getelementptr inbounds i32, i32* %277, i64 30
  %279 = load i32, i32* %278, align 4
  %280 = load i32, i32* %14, align 4
  %281 = add nsw i32 %279, %280
  %282 = call i32 @av_clip_pixel(i32 %281)
  %283 = load i32*, i32** %9, align 8
  %284 = getelementptr inbounds i32, i32* %283, i64 30
  store i32 %282, i32* %284, align 4
  %285 = load i32*, i32** %11, align 8
  %286 = getelementptr inbounds i32, i32* %285, i64 31
  %287 = load i32, i32* %286, align 4
  %288 = load i32, i32* %14, align 4
  %289 = add nsw i32 %287, %288
  %290 = call i32 @av_clip_pixel(i32 %289)
  %291 = load i32*, i32** %9, align 8
  %292 = getelementptr inbounds i32, i32* %291, i64 31
  store i32 %290, i32* %292, align 4
  %293 = load i32, i32* %6, align 4
  %294 = load i32*, i32** %9, align 8
  %295 = sext i32 %293 to i64
  %296 = getelementptr inbounds i32, i32* %294, i64 %295
  store i32* %296, i32** %9, align 8
  br label %297

297:                                              ; preds = %28
  %298 = load i32, i32* %12, align 4
  %299 = add nsw i32 %298, 1
  store i32 %299, i32* %12, align 4
  br label %25

300:                                              ; preds = %25
  ret void
}

declare dso_local i32 @av_clip_pixel(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
